--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
     <br>
     <p>For example, given [(30, 75), (0, 50), (60, 150)], you should return 2.</p>
     <br>
-    <p><b>Answer:</b></p>
-    <p>See the script.js file for the bussiness logic implementation.</p>
-    <p>Input LL A: <br> <b><span id='output-section-1'></span></b></p>
-    <p>Input LL B: <br> <b><span id='output-section-2'></span></b></p>
-    <p>Output: <b>[<span id='output-section-3'></span>]</b></p>
+    <p><b>Answer*:</b></p>
+    <p>Partial answer - created algorithm that counts number of overlaps.</p>
+    <p>interval 1: <b><span id='output-section-1'></span></b></p>
+    <p>interval 2: <b><span id='output-section-2'></span></b></p>
+    <p>interval 3: <b><span id='output-section-3'></span></b></p>
+    <p>interval 4: <b><span id='output-section-4'></span></b></p>
+    <p>interval 5: <b><span id='output-section-5'></span></b></p>
+    <p>number of overlaps: <b>[<span id='output-section-6'></span>]</b></p>
   </body>
 </html>
